--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo": "~52.0.35",
     "expo-application": "~6.0.2",
     "expo-build-properties": "~0.13.2",
+    "expo-clipboard": "~7.0.1",
     "expo-dev-client": "~5.0.12",
     "expo-image": "~2.0.5",
     "expo-image-picker": "~16.0.6",
