--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@shopify/flash-list": "1.7.3",
     "country-emoji": "^1.5.6",
     "date-fns": "^2.29.3",
-    "expo": "~52.0.35",
+    "expo": "~52.0.36",
     "expo-application": "~6.0.2",
     "expo-build-properties": "~0.13.2",
     "expo-clipboard": "~7.0.1",
@@ -57,6 +57,7 @@
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.26.18",
+    "expo-video": "~2.0.5",
     "formik": "^2.2.9",
     "i18n-js": "^4.2.3",
     "lodash": "^4.17.21",
