--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "expo-build-properties": "~0.13.2",
     "expo-clipboard": "~7.0.1",
     "expo-dev-client": "~5.0.12",
+    "expo-file-system": "~18.0.11",
     "expo-image": "~2.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
