--- a/package.json
+++ b/package.json
@@ -68,12 +68,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-mobile-ads": "^14.9.0",
     "react-native-mmkv": "^2.7.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-ui-lib": "^7.37.2",
     "react-native-web": "~0.19.13",
     "rn-bounceable": "^1.2.0",
