--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@kanzitelli/if-component": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
