--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
+    "expo-tracking-transparency": "~5.1.1",
     "expo-updates": "~0.26.18",
     "expo-video": "~2.0.5",
     "formik": "^2.2.9",
