[f] Remove downloader on app name.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "TokSaver - No watermark video downloader",
+    "name": "TokSaver - No watermark videos",
     "slug": "top-top-saver",
     "version": "1.0.0",
     "orientation": "portrait",
