Update app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "TokSaver - No watermark videos",
+    "name": "TokSaver - TT Videos Library",
     "slug": "top-top-saver",
     "version": "1.0.0",
     "orientation": "portrait",
